# rust-jsonrpc-backend

./: .env  .gitignore  README.md
json-rpc-backend/: Cargo.toml  Dockerfile
json-rpc-backend/src/: lib.rs  main.rs
json-rpc-backend/src/core/: data.rs  rpc.rs
json-rpc-backend/src/handlers/: error.rs  healthcheck.rs  mod.rs  phone_number.rs
json-rpc-backend/src/utils/: envs.rs  mod.rs  phone_numbers.rs
tests/: test_rpc.py
