[package]
name = "json-rpc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
ntex = {version = "2.6.0", features = ["tokio", "compress"]}
serde = "1.0.210"
serde_json = "1.0.128"
lazy_static = "1.5.0"
log = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.11.5"
derive_more = {version = "1.0.0", features = ["full"]}
http = "1.1.0"

[profile.dev]
opt-level = 0
lto = "off"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
